# service/room/openapi.yaml
@@ -344,6 +344,31 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/room.v1.SendMessageReply'
+    /v1/rooms/{roomId}/quit:
+        post:
+            tags:
+                - RoomService
+            description: 退出群（删除成员记录）
+            operationId: RoomService_QuitRoom
+            parameters:
+                - name: roomId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/room.v1.QuitRoomRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/room.v1.QuitRoomReply'
     /v1/users/{userId}/rooms:
         get:
             tags:
@@ -530,6 +555,18 @@ components:
                 muteUntil:
                     type: string
             description: 禁言/解禁成员请求
+        room.v1.QuitRoomReply:
+            type: object
+            properties:
+                success:
+                    type: boolean
+            description: 退出群（删除成员）响应
+        room.v1.QuitRoomRequest:
+            type: object
+            properties:
+                roomId:
+                    type: string
+            description: 退出群（删除成员）请求
         room.v1.Room:
             type: object
             properties:
